--- a/settings.html
+++ b/settings.html
@@ -10,8 +10,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Particles.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.1"></script>
 </head>
 <body>
+  <!-- Particles Container -->
+  <div id="particles-js" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
+
   <nav class="tabbar">
     <a class="tab-link" href="today.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -28,7 +33,7 @@
     </a>
     <a class="tab-link" href="exercises.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2-2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
       </svg>
       <span>Exercises</span>
     </a>
@@ -48,7 +53,7 @@
       </svg>
       <span>Settings</span>
     </a>
-</nav>
+  </nav>
   <!-- Main Content -->
   <div class="content">
     <header>
@@ -77,6 +82,28 @@
       } else {
         link.classList.remove('active');
       }
+    });
+
+    // Initialize particles.js
+    tsParticles.load("particles-js", {
+      particles: {
+        number: {
+          value: 50,
+        },
+        size: {
+          value: 3,
+        },
+        move: {
+          enable: true,
+          speed: 2,
+        },
+        links: {
+          enable: true,
+          distance: 150,
+          opacity: 0.4,
+          width: 1,
+        },
+      },
     });
   </script>
 </body>
