--- a/settings.html
+++ b/settings.html
@@ -10,12 +10,30 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Particles.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.1"></script>
+  <!-- Particles.js Script -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  
+  <style>
+    /* Ensure particles cover the entire background */
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;  /* Make sure particles are behind the content */
+    }
+
+    /* Content styling to ensure visibility */
+    .content {
+      position: relative;
+      z-index: 1;  /* Content should appear above particles */
+    }
+  </style>
 </head>
 <body>
-  <!-- Particles Container -->
-  <div id="particles-js" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
+  <!-- Particles Background -->
+  <div id="particles-js"></div>
 
   <nav class="tabbar">
     <a class="tab-link" href="today.html">
@@ -54,56 +72,108 @@
       <span>Settings</span>
     </a>
   </nav>
-  <!-- Main Content -->
+
   <div class="content">
     <header>
-      <h1>Settings</h1>
+      <h1>Achievements</h1>
     </header>
     <main>
-      <section>
-        <h2>Manage Profile</h2>
-        <form id="profileForm">
-          <label for="name">Name:</label>
-          <input type="text" id="name" required>
-          <label for="email">Email:</label>
-          <input type="email" id="email" required>
-          <button type="submit">Save</button>
-        </form>
+      <section class="achievements">
+        <div class="achievement" data-achievement="mars">
+          <img class="locked" src="images/mars_blurred.png" alt="Mars Achievement">
+          <img class="unlocked" src="images/mars.png" alt="Mars Achievement">
+          <p>Drink 4L water daily for 7 days to unlock Mars.</p>
+        </div>
+
+        <div class="achievement" data-achievement="jupiter">
+          <img class="locked" src="images/jupiter_blurred.png" alt="Jupiter Achievement">
+          <img class="unlocked" src="images/jupiter.png" alt="Jupiter Achievement">
+          <p>Complete 10,000 steps daily for 14 days to visit Jupiter.</p>
+        </div>
+
+        <div class="achievement" data-achievement="saturn">
+          <img class="locked" src="images/saturn_blurred.png" alt="Saturn Achievement">
+          <img class="unlocked" src="images/saturn.png" alt="Saturn Achievement">
+          <p>Sleep 8 hours daily for 14 days to unlock Saturn.</p>
+        </div>
+
+        <!-- Add more achievements -->
       </section>
     </main>
   </div>
 
-  <script>
-    // Dynamically set the active class
-    const currentPath = window.location.pathname;
-    document.querySelectorAll('.tabbar a').forEach((link) => {
-      if (link.getAttribute('href') === currentPath.split('/').pop()) {
-        link.classList.add('active');
-      } else {
-        link.classList.remove('active');
-      }
-    });
+  <script src="js/achievements.js"></script>
 
-    // Initialize particles.js
-    tsParticles.load("particles-js", {
-      particles: {
-        number: {
-          value: 50,
+  <!-- Particles.js Initialization -->
+  <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": {
+          "value": 80,  // Number of particles
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
         },
-        size: {
-          value: 3,
+        "color": {
+          "value": "#ffffff"  // Color of particles
         },
-        move: {
-          enable: true,
-          speed: 2,
+        "shape": {
+          "type": "circle",  // Shape of particles
+          "stroke": {
+            "width": 0,
+            "color": "#000000"
+          }
         },
-        links: {
-          enable: true,
-          distance: 150,
-          opacity: 0.4,
-          width: 1,
+        "opacity": {
+          "value": 0.5,
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 1,
+            "opacity_min": 0.1,
+            "sync": false
+          }
         },
+        "size": {
+          "value": 3,
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 4,
+            "size_min": 0.1,
+            "sync": false
+          }
+        },
+        "move": {
+          "enable": true,
+          "speed": 2,
+          "direction": "none",
+          "random": true,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": {
+            "enable": false,
+            "rotateX": 600,
+            "rotateY": 1200
+          }
+        }
       },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": {
+            "enable": true,
+            "mode": "repulse"
+          },
+          "onclick": {
+            "enable": true,
+            "mode": "push"
+          }
+        }
+      },
+      "retina_detect": true
     });
   </script>
 </body>
