--- a/today.html
+++ b/today.html
@@ -10,8 +10,31 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Particles.js Script -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+  <style>
+    /* Ensure particles cover the entire background */
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;  /* Make sure particles are behind the content */
+    }
+
+    /* Content styling to ensure visibility */
+    .content {
+      position: relative;
+      z-index: 1;  /* Content should appear above particles */
+    }
+  </style>
 </head>
 <body>
+  <!-- Particles Background -->
+  <div id="particles-js"></div>
+
   <nav class="tabbar">
     <a class="tab-link" href="today.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -34,7 +57,7 @@
     </a>
     <a class="tab-link" href="stats.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2-2 0 01-2-2z"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 0 01-2 2v14a2 2 0 01-2 2h-2a2-2 0 01-2-2z"></path>
       </svg>
       <span>Stats</span>
     </a>
@@ -48,9 +71,7 @@
       </svg>
       <span>Settings</span>
     </a>
-</nav>
-
-
+  </nav>
 
   <div class="content">
     <header>
@@ -102,6 +123,43 @@
       </section>
     </main>
   </div>
+
+  <!-- Particles.js Initialization -->
+  <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": {
+          "value": 80,  // Number of particles
+          "density": {
+            "enable": true,
+            "value_area": 800  // Area of particle distribution
+          }
+        },
+        "color": {
+          "value": "#ffffff"  // White particles
+        },
+        "shape": {
+          "type": "circle",  // Shape of the particles
+          "stroke": {
+            "width": 0,  // No stroke
+            "color": "#000000"
+          }
+        },
+        "size": {
+          "value": 3,  // Particle size
+          "random": true
+        },
+        "move": {
+          "enable": true,
+          "speed": 2,
+          "direction": "none",  // No specific movement direction
+          "random": true,
+          "out_mode": "out"
+        }
+      }
+    });
+  </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
           integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
