--- a/week.html
+++ b/week.html
@@ -3,15 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Today | Astronaut Fitness Tracker</title>
+  <title>Week | Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <!-- Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Particles.js Script -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+  <style>
+    /* Ensure particles cover the entire background */
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;  /* Make sure particles are behind the content */
+    }
+
+    /* Content styling to ensure visibility */
+    .content {
+      position: relative;
+      z-index: 1;  /* Content should appear above particles */
+    }
+  </style>
 </head>
 <body>
+  <!-- Particles Background -->
+  <div id="particles-js"></div>
+
   <nav class="tabbar">
     <a class="tab-link" href="today.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -48,8 +71,7 @@
       </svg>
       <span>Settings</span>
     </a>
-</nav>
-
+  </nav>
 
   <!-- Main Content -->
   <div class="content">
@@ -65,5 +87,42 @@
   </div>
 
   <script src="js/week.js"></script>
+
+  <!-- Particles.js Initialization -->
+  <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": {
+          "value": 80,  // Number of particles
+          "density": {
+            "enable": true,
+            "value_area": 800  // Area of particle distribution
+          }
+        },
+        "color": {
+          "value": "#ffffff"  // White particles
+        },
+        "shape": {
+          "type": "circle",  // Shape of the particles
+          "stroke": {
+            "width": 0,  // No stroke
+            "color": "#000000"
+          }
+        },
+        "size": {
+          "value": 3,  // Particle size
+          "random": true
+        },
+        "move": {
+          "enable": true,
+          "speed": 2,
+          "direction": "none",  // No specific movement direction
+          "random": true,
+          "out_mode": "out"
+        }
+      }
+    });
+  </script>
+
 </body>
 </html>
